[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Actors/Squad.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actor/Characters/RedNinja/SpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Actor/Characters/MaskFrog/SpriteSheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Actor/Characters/Eskimo/SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Actors/Player.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 8.125 )

[node name="Squad" type="KinematicBody2D"]
position = Vector2( 2, 9 )
collision_layer = 2
script = ExtResource( 1 )

[node name="TopCharacter" type="Position2D" parent="."]
visible = false
position = Vector2( 9, 2 )

[node name="RightCharacter" type="Position2D" parent="."]
visible = false
position = Vector2( 18, 10 )

[node name="BottomCharacter" type="Position2D" parent="."]
visible = false
position = Vector2( 9, 20 )

[node name="LeftCharacter" type="Position2D" parent="."]
visible = false
position = Vector2( 0, 11 )

[node name="Player2" parent="." instance=ExtResource( 5 )]
position = Vector2( 9, 0 )

[node name="Gun" parent="Player2" index="0"]
frame = 5

[node name="Body" parent="Player2" index="1"]
position = Vector2( 0, 3 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 18, 9 )

[node name="Player4" parent="." instance=ExtResource( 5 )]
position = Vector2( -3, 10 )

[node name="Gun" parent="Player4" index="0"]
frame = 4

[node name="Body" parent="Player4" index="1"]
position = Vector2( 3, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="Player4" index="2"]
position = Vector2( 1, -16 )

[node name="Player3" parent="." instance=ExtResource( 5 )]
position = Vector2( 9, 16 )

[node name="Gun" parent="Player3" index="0"]
frame = 1

[node name="Body" parent="Player3" index="1"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="Player3" index="2"]
position = Vector2( 16, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 9, 14.875 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 3072
limit_bottom = 1536

[node name="ShootPositionRight" type="Position2D" parent="."]
position = Vector2( 38, 8 )

[node name="ShootPositionUp" type="Position2D" parent="."]
position = Vector2( 8, -16 )

[node name="ShootPositionLeft" type="Position2D" parent="."]
position = Vector2( -21, 12 )

[node name="ShootPositionDown" type="Position2D" parent="."]
position = Vector2( 9, 36 )

[editable path="Player2"]
[editable path="Player4"]
[editable path="Player3"]
